# marscar_gazebo_ros2

./: .gitignore  README.md
log/: latest_build
src/gazebo_plugins_mode/: CMakeLists.txt  package.xml
src/gazebo_plugins_mode/include/gazebo_plugins/: MarsRoverDriver.h  advanced_liftdrag_plugin.hpp  ball_shooter_plugin.hpp  gazebo_no_physics.hpp  gazebo_ros_3d_move.hpp  gazebo_ros_force_mode.hpp  gazebo_ros_planar_move.hpp  gazebo_ros_state_mode.hpp  gazebo_ros_test.hpp  marsrover_control.hpp  template.hpp
src/gazebo_plugins_mode/src/: MarsRoverDriver.cpp  XBOX.cpp  advanced_liftdrag_plugin.cpp  ball_shooter_plugin.cpp  boom.cpp  gazebo_link_attacher.cpp  gazebo_no_physics.cpp  gazebo_ros_3d_move_mode copy.cpp  gazebo_ros_ackermann_drive.cpp  gazebo_ros_chassis.cpp  gazebo_ros_diff_drive.cpp  gazebo_ros_force_mode.cpp  gazebo_ros_odom.cpp  gazebo_ros_planar_move1.cpp  gazebo_ros_state_mode.cpp  gazebo_ros_test.cpp  marsrover_control.cpp  template.cpp
src/gazebo_plugins_mode/worlds/: attach.world  boom.world  force.world  ft_sensor.world  gazebo_no_physics.world  gazebo_ros_3d_move_demo.world  gazebo_ros_ackermann_drive_demo.world  gazebo_ros_planar_move_demo.world  gazebo_ros_state_demo.world  marsrover.world  test.world
src/marscar_gazebo_ros2/: CMakeLists.txt  package.xml  txt.txt
src/marscar_gazebo_ros2/config/: cartpole_controller_effort.yaml  joystick.yaml  lqr_control.yaml  mars_car_controller.yaml  octomap_server.yaml  twist_mux.yaml
src/marscar_gazebo_ros2/examples/: example_effort.cpp  set_link_wrench.cpp
src/marscar_gazebo_ros2/launch/: cable_effort.launch.py  lqr_control.launch.py  marscar.launch.py  marscar_test.launch.py  marscar_test.py  marscar_tiny.launch.py  marsrover_control.launch.py  spawn_urdf.launch.py  tiny_spawn_urdf.launch.py
src/marscar_gazebo_ros2/meshes/: bai.dae
src/marscar_gazebo_ros2/meshes/mars_rover/: arm1_Link.STL  arm2_Link.STL  arm3_Link.STL  arm4_Link.STL  base_link.STL  camera_Link.STL  left_connect_Link.STL  left_front_foot_Link.STL  left_front_wheel_Link.STL  left_middle_wheel_Link.STL  left_rear_connect_Link.STL  left_rear_foot_Link.STL  left_rear_wheel_Link.STL  right_connect_Link.STL  right_front_foot_Link.STL  right_front_wheel_Link.STL  right_middle_Link.STL  right_rear_connect_Link.STL  right_rear_foot_Link.STL  right_rear_wheel_Link.STL
src/marscar_gazebo_ros2/models/blue_projectile/: model.sdf
src/marscar_gazebo_ros2/models/cube/: model.sdf
src/marscar_gazebo_ros2/models/keypoints/: model.config  model.sdf
src/marscar_gazebo_ros2/models/mars_car/meshes/dae/: Mars6Mars_Rover__Curiosity_1_0__-_15__Arm_Axle-2.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_16_Arm_1-2.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_17__Arm_2-2.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_18_Drill_joint-1.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_1__Rover_Wheel_left_1.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_1__Rover_Wheel_left_2.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_1__Rover_Wheel_left_3.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_1__Rover_Wheel_right_1.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_1__Rover_Wheel_right_2.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_1__Rover_Wheel_right_3.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_28_Wheel_connector_1-2.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_28_Wheel_connector_1-2_00.dae  Mars6Mars_Rover__Curiosity_1_0__-_29_Wheel_Connector_2-2.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_29_Wheel_Connector_2-2_00.dae  Mars6Mars_Rover__Curiosity_1_0__-_33_Front_Wheel_Servo_mech.003.dae  Mars6Mars_Rover__Curiosity_1_0__-_33_Front_Wheel_Servo_mech.004.dae  Mars6Mars_Rover__Curiosity_1_0__-_33_Front_Wheel_Servo_mech.005.dae  Mars6Mars_Rover__Curiosity_1_0__-_33_Front_Wheel_Servo_mech.006.dae  Mars6Mars_Rover__Curiosity_1_0__-_7__Matscam_Holder-1.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_whole_body.001.dae
src/marscar_gazebo_ros2/models/mars_car_tiny/meshes/dae/: Mars6Mars_Rover__Curiosity_1_0__-_18_Drill_joint-1.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_1__Rover_Wheel_left_1.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_1__Rover_Wheel_left_2.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_1__Rover_Wheel_left_3.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_1__Rover_Wheel_right_1.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_1__Rover_Wheel_right_2.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_1__Rover_Wheel_right_3.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_28_Wheel_connector_1-2.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_28_Wheel_connector_1-2_00.dae  Mars6Mars_Rover__Curiosity_1_0__-_29_Wheel_Connector_2-2.001.dae  Mars6Mars_Rover__Curiosity_1_0__-_29_Wheel_Connector_2-2_00.dae  Mars6Mars_Rover__Curiosity_1_0__-_33_Front_Wheel_Servo_mech.003.dae  Mars6Mars_Rover__Curiosity_1_0__-_33_Front_Wheel_Servo_mech.004.dae  (+4 more)
src/marscar_gazebo_ros2/models/sand_heightmap/: model.sdf
src/marscar_gazebo_ros2/models/simple_arm/: model.config  model.sdf
src/marscar_gazebo_ros2/msgs/msg/: Cableposseqq.msg
src/marscar_gazebo_ros2/scripts/: __init__.py  cable_pos_plot.py  calc_inertia_for_urdf.py  joy2twist.py  joy_cart.py  joy_plugin_vel.py  joy_shooter.py  joy_twist_cmd.py  joy_twist_plugindrive.py  keep_balance.py  lable.py  lable2.py  lable3.py  lqr_control.py  mars_cmdvel.py  mars_rover_keyboard.py  mars_roverplugindrive.py  teleop_joy.py  teleop_keyboard.py  test.py
src/marscar_gazebo_ros2/scripts/ros2_turtial/: Subscriber.py  publisher.py
src/marscar_gazebo_ros2/scripts/ros2_tutorial/: Subscriber.py  client.py  publisher.py  service.py
src/marscar_gazebo_ros2/sensor_description/: depth_camera.xacro  gazebo.xacro  gps.xacro  imu.xacro  marscar_3Dlidar.xacro  marscar_camera.xacro  marscar_lidar.xacro  multi_camera.xacro
src/marscar_gazebo_ros2/urdf/: lqr_control.urdf.xacro  mars_car_tiny_forward.urdf  mars_car_tiny_forward.urdf.xacro  mars_rover.urdf  marscar_blender.urdf  marscar_blender.urdf.xacro  marsrover_control.urdf.xacro  marsrover_scenter.urdf  robot.urdf  roll_effort.xacro
src/marscar_gazebo_ros2/worlds/: double_pendulum.world  empty.world  hand_detect.world  orb_slam.world  sand.world  simple.world
(+61 files in other folders)
